--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@ html {
 
 body {
   background-color: turquoise;
+  background-image: url("https://www.transparenttextures.com/patterns/dark-mosaic.png");
   margin: 0;
 }
 
